[package]
name = "paprika"
version = "0.1.0"
authors = ["Peter Cai <peter@typeblog.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[build]
target = "wasm32-unknown-unknown"

[build-dependencies]
serde = "1.0"
serde_json = "1.0"

[dependencies]
cfg-if = "0.1.2"
chrono = "0.4"
lazy_static = "1.4"
handlebars = "3.0"
hex = "0.4"
include_dir = "0.5"
js-sys = "0.3"
mime_guess = "2.0"
pulldown-cmark = { version = "0.7", default-features = false }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Crypto",
    "Headers",
    "ReadableStream",
    "Request",
    "RequestInit",
    "RequestRedirect",
    "Response",
    "ResponseInit",
    "SubtleCrypto",
    "Url",
    "UrlSearchParams"
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = 3
lto = true